# exactonline-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
specs/001-balance-sheet-financial/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-balance-sheet-financial/contracts/: mcp-tools.json
specs/001-discovery-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-discovery-tools/checklists/: requirements.md
specs/001-discovery-tools/contracts/: mcp-tools.json
specs/002-revenue-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-revenue-tools/checklists/: requirements.md
specs/002-revenue-tools/contracts/: mcp-tools.json
specs/003-open-receivables/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-open-receivables/contracts/: mcp-tools.md
specs/004-bank-purchase-data/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-bank-purchase-data/checklists/: requirements.md
specs/004-bank-purchase-data/contracts/: mcp-tools.md
src/exactonline_mcp/: __init__.py  __main__.py  auth.py  client.py  endpoints.py  exceptions.py  models.py  server.py
tests/: test_sanitization.py
